# CppResource

./: CMakeLists.txt  README.md  Resource.h  generator.cpp
example/: CMakeLists.txt  README.md  main.cpp
example/textfiles/: f1.txt  f2.txt  f3.txt
